// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionIndicator DOM rendering renders correctly with color 1`] = `
<span>
  <PositionCircle
    color="GREEN"
  >
    1
  </PositionCircle>
</span>
`;

exports[`PositionIndicator DOM rendering renders correctly with default props 1`] = `
<span>
  <PositionCircle
    color={null}
  >
    1
  </PositionCircle>
</span>
`;

exports[`PositionIndicator DOM rendering renders correctly with negative position change 1`] = `
<span>
  <PositionCircle
    color={null}
  >
    4
  </PositionCircle>
  <i
    className="triangle down"
  />
</span>
`;

exports[`PositionIndicator DOM rendering renders correctly with positive position change 1`] = `
<span>
  <PositionCircle
    color={null}
  >
    1
  </PositionCircle>
  <i
    className="triangle up"
  />
</span>
`;
